deploy/tke-package/rendered/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portal-staging
---
apiVersion: v1
kind: Namespace
metadata:
  name: portal-runtime-staging
